--- a/EXCLU/index.html
+++ b/EXCLU/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 	<head>
-		<script type="text/javascript">function setCookie(cname,cvalue,exhours){var d=new Date();d.setTime(d.getTime()+(exhours*60*60*1000));var expires="expires="+d.toUTCString();document.cookie=cname+"="+cvalue+";"+expires+";path=/"}function login(){alert("HELLO");var testV=1;var pass1=prompt('Please Enter Your Password','Password');while(testV<3){if(!pass1){history.go(-1)}var pass="8386d715-6636-4ce5-9381-eb2c2a7938f8";if(pass1.toLowerCase()==pass){alert('You Got it Right!');window.open('/EXCLU/locked.html');setcookie("loggedIn",true,1);break}testV+=1;var pass1=prompt('Access Denied - Password Incorrect, Please Try Again.','Password:');if(pass1.toLowerCase()!=pass){if(testV===3){history.go(-1);return" "}}}}</script>
+		<script type="text/javascript">function setCookie(cname,cvalue,exhours){var d=new Date();d.setTime(d.getTime()+(exhours*60*60*1000));var expires="expires="+d.toUTCString();document.cookie=cname+"="+cvalue+";"+expires+";path=/"}function login(){alert("HELLO");var testV=1;var pass1=prompt('Please Enter Your Password','Password');while(testV<3){if(!pass1){history.go(-1)}var pass="8386d715-6636-4ce5-9381-eb2c2a7938f8";if(pass1.toLowerCase()==pass){alert('You Got it Right!');window.open('/EXCLU/locked.html');setcookie("loggedIn","on",1);break}testV+=1;var pass1=prompt('Access Denied - Password Incorrect, Please Try Again.','Password:');if(pass1.toLowerCase()!=pass){if(testV===3){history.go(-1);return" "}}}}</script>
 		<style type="text/css">
 		body {
 		margin:   0;
