--- a/EXCLU/locked.html
+++ b/EXCLU/locked.html
@@ -17,5 +17,19 @@
 		</style>
 	</head>
 	<body onload="checkCookie();">
+		<div id="clockdiv">
+			<div>
+				<span class="hours" id="hour"></span>
+				<div class="smalltext">Hours</div>
+			</div>
+			<div>
+				<span class="minutes" id="minute"></span>
+				<div class="smalltext">Minutes</div>
+			</div>
+			<div>
+				<span class="seconds" id="second"></span>
+				<div class="smalltext">Seconds</div>
+			</div>
+		</div>
 	</body>
 </html>
