--- a/EXCLU/index.html
+++ b/EXCLU/index.html
@@ -2,22 +2,31 @@
 <html> 
 	<head>
 	<script src="/resources/js.cookie-2.2.0.min.js"></script>
-	<script type="text/javascript">function login(){alert("HELLO");var testV=1;var pass1=prompt('Please Enter Your Password','Password'); while(testV<3){if(!pass1){history.go(-1)} function binaryAgent(){var strArray = "00111000 00110011 00111000 00110110 01100100 00110111 00110001 00110101 00101101 00110110 00110110 00110011 00110110 00101101 00110100 01100011 01100101 00110101 00101101 00111001 00110011 00111000 00110001 00101101 01100101 01100010 00110010 01100011 00110010 01100001 00110111 00111001 00110011 00111000 01100110 00111000".split(" "); var text =""; for(var i = 0 ; i<strArray.length ; i++){var char = parseInt(strArray[i],2).toString(10);char = String.fromCharCode(char); text += char;} return text;}; if(pass1.toLowerCase()==binaryAgent()){alert('You Got it Right!'); Cookies.set("loggedIn","true"); var time=getTime()+3600000; Cookies.set("expire", time); window.open('/EXCLU/locked.html'); return " ";} testV+=1;var pass1=prompt('Access Denied - Password Incorrect, Please Try Again.','Password:');if(pass1.toLowerCase()!=binaryAgent()){if(testV===3){history.go(-1);return "";} if(pass1.toLowerCase===null){history.go(-1);return "";}}}}</script>
+	<script type="text/javascript">function update(){Cookies.set("loggedIn","true"); var time=getTime()+3600000; Cookies.set("expire", time); window.open('/EXCLU/locked.html');} function login(){alert("HELLO");var testV=1;var pass1=prompt('Please Enter Your Password','Password'); while(testV<3){if(!pass1){history.go(-1)} function binaryAgent(){var strArray = "00111000 00110011 00111000 00110110 01100100 00110111 00110001 00110101 00101101 00110110 00110110 00110011 00110110 00101101 00110100 01100011 01100101 00110101 00101101 00111001 00110011 00111000 00110001 00101101 01100101 01100010 00110010 01100011 00110010 01100001 00110111 00111001 00110011 00111000 01100110 00111000".split(" "); var text =""; for(var i = 0 ; i<strArray.length ; i++){var char = parseInt(strArray[i],2).toString(10); char = String.fromCharCode(char); text += char;} return text;}; if(pass1.toLowerCase()==binaryAgent()){document.getElementById("status").innerHTML("Welcome!"); setTimeout(update, 2048);} testV+=1;var pass1=prompt('Access Denied - Password Incorrect, Please Try Again.','Password:');if(pass1.toLowerCase()!=binaryAgent()){if(testV===3){history.go(-1); return "";} if(pass1.toLowerCase===null){history.go(-1);return "";}}}}</script>
 		<style type="text/css">
 		body {
-		margin:   0;
-		overflow: hidden;
+			margin:   0;
+			overflow: hidden;
 		}
 		#iframe1{
-		height:   100%;
-		left:     0px;
-		position: absolute;
-		top:      0px;
-		width:    100%;
+			height:   100%;
+			left:     0px;
+			position: absolute;
+			top:      0px;
+			width:    100%;
+		}
+		.red {
+			font-color: red;
+		}
+		.loginbutton {
+			height: ;
+			width: ;
 		}
 		</style>
 	</head>
 	<body>
-		<input type="button" onclick="login()" value="Login">
+		<h1 class="red" id="status">Not Logged In</h1>
+		<br>
+		<input class="loginbutton" type="button" onclick="login()" value="Login">
 	</body>
 </html>
