--- a/EXCLU/index.html
+++ b/EXCLU/index.html
@@ -19,8 +19,8 @@
 			font-color: red;
 		}
 		.loginbutton {
-			height: ;
-			width: ;
+			height: 128px ;
+			width: 48px;
 		}
 		</style>
 	</head>
