--- a/EXCLU/register.html
+++ b/EXCLU/register.html
@@ -3,9 +3,10 @@
 	<head>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="/resources/js.cookie-2.2.0.min.js"></script>
-	<script src="/EXCLU/register.js"></script>
-	<script src="/EXCLU/login.js"></script>
-	<script type="text/javascript"></script>
+	<script src="/EXCLU/testform-register.js"></script>
+	<script src="/EXCLU/testform-login.js"></script>
+	<script type="text/javascript">
+</script>
 		<style type="text/css">
 		body {
 			margin:   0;
@@ -37,16 +38,16 @@
 		</form>
 		<form id="registerForm">
 			<div>
-				Registration Key:   <input type="text" id="registerKey"><p class="red" id="regkeythrow"></p>
+				Registration Key: <input type="text" id="registerKey"><p class="red" id="regkeythrow"></p>
 			</div>
 			<div>
-				Username:           <input type="password" id="user"><p class="red" id="usrthrow"></p>
+				Username: <input type="password" id="user"><p class="red" id="usrthrow"></p>
 			</div>
 			<div>
-				Password:           <input type="password" id="pwd">
+				Password: <input type="password" id="pwd">
 			</div>
 			<div>
-				Confirm Password:   <input type="text" id="pwdconf"><p class="red" id="pwdthrow">
+				Confirm Password: <input type="text" id="pwdconf"><p class="red" id="pwdthrow">
 			</div>
 			<input class="loginbutton" type="button" onclick="register()" value="Register">
 		</form>
