--- a/EXCLU/login.html
+++ b/EXCLU/login.html
@@ -36,7 +36,7 @@
 		<form id="registerForm">
 			<div>
 			Username:<br>
-			<input type="password" id="user"><p class="red" id="usrthrow"></p>
+			<input type="text" id="user"><p class="red" id="usrthrow"></p>
 			</div>
 			<div>
 			Password:<br>
