--- a/BIT/index.html
+++ b/BIT/index.html
@@ -1,1 +1,6 @@
-WELCOme To A BITC OCIN trAtDING WEBSTEI.
+<!DOCTYPE HTML>
+
+<body>
+	<p>WELCOme To A BITC OCIN trAtDING WEBSTEI.<p>
+	<iframe src="/trade/index.html"></iframe>
+</body>
