--- a/UnB/index.html
+++ b/UnB/index.html
@@ -4,9 +4,9 @@
   </head>
   <body>
     <ol>
-    <li><a href="phpxy.html">PHPXY</a></li>
-    <li><a href="phpxy2.html">PHPXY - Mirror</a></li>
-    <li><a href="unbpxy.html">UNBPXY (NOT WORKING)</a></li>
+    <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a></li>
+    <li><a href="http://welcttw.gq/UnB/phpxy2.html">PHPXY - Mirror</a></li>
+    <li><a href="http://welcttw.gq/UnB/unbpxy.html">UNBPXY (NOT WORKING)</a></li>
     </ol>
   </body>
 </html>
