--- a/UnB/index.html
+++ b/UnB/index.html
@@ -5,7 +5,7 @@
   <body>
     <ol>
     <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a></li>
-    <li><a href="http://welcttw.gq/UnB/phpxy2.html">PHPXY - Mirror</a></li>
+    <li><a href="http://welcttw.gq/UnB/phpxy2.html">PHPXY2 (NOT WORKING)</a></li>
     <li><a href="http://welcttw.gq/UnB/unbpxy.html">UNBPXY (NOT WORKING)</a></li>
     </ol>
   </body>
