--- a/UnB/index.html
+++ b/UnB/index.html
@@ -4,9 +4,9 @@
   </head>
   <body>
     <ol>
-    <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a></li>
-    <li><a href="http://welcttw.gq/UnB/phpxy2.html">PHPXY2 (NOT WORKING)</a></li>
-    <li><a href="http://welcttw.gq/UnB/unbpxy.html">UNBPXY (NOT WORKING)</a></li>
+      <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a> (WORKING)</li>
+      <li><a href="http://welcttw.gq/UnB/tinypxy.html">TINYPXY</a> (WORKING)</li>
+      <li><a href="http://welcttw.gq/UnB/unbpxy.html">UNBPXY</a> (NOT WORKING)</li>
     </ol>
   </body>
 </html>
