Update and rename phpxy3.html to phpxy2.html

--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <iframe id="iframe1" src="http://whereis.welcttw.ml/phpxy3.html" frameborder="0"></iframe>
+    <iframe id="iframe1" src="http://whereis.welcttw.ml/phpxy.html" frameborder="0"></iframe>
   </body>
 </html>
