--- a/UnB/tinypxy.html
+++ b/UnB/tinypxy.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <iframe id="iframe1" src="http://whereis.welcttw.gq/phpxy2.html" frameborder="0"></iframe>
+    <iframe id="iframe1" src="https://www.youtube.com/watch?v=z-nfbDXTiHg" frameborder="0"></iframe>
   </body>
 </html>
