--- a/UnB/phpxy.html
+++ b/UnB/phpxy.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <iframe id="iframe1" src="https://www.youtube.com/watch?v=z-nfbDXTiHg" frameborder="0"></iframe>
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/z-nfbDXTiHg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </body>
 </html>
