--- a/EXCLU/login.html
+++ b/EXCLU/login.html
@@ -42,6 +42,7 @@
 			Password:<br>
 			<input type="password" id="pwd">
 			</div>
+			<input type="hidden" name="token" id="token" value="<?php echo $token; ?>"/>
 			<input class="loginbutton" type="button" onclick="login()" value="Login">
 		</form>
 	</body>
