--- a/UnB/phpxy.html
+++ b/UnB/phpxy.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <iframe width="854" height="480" src="https://www.youtube.com/embed/z-nfbDXTiHg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com" frameborder="0"></iframe>
 <br>Think about it: what comes after 1? there must be a 2!<br>If you can find it, then you can use the proxy again!<br><h3>The proxy will be back online on May 8, 2018.</h3>
   </body>
 </html>
