--- a/UnB/index.html
+++ b/UnB/index.html
@@ -4,9 +4,9 @@
   </head>
   <body>
     <ol>
-      <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a> (WORKING)</li>
+      <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a> (Not Working) <a href="http://welcttw.gq/UnB/phpxy2.html">Mirror</a></li>
       <li><a href="http://welcttw.gq/UnB/tinypxy.html">TINYPXY</a> (WORKING)</li>
-      <li><a href="http://welcttw.gq/UnB/glypxy.html">UNBPXY</a> (Working) [NEW!]</li>
+      <li><a href="http://welcttw.gq/UnB/phpxy3.html">PHPXY3</a> (Working) [NEW!]</li>
     </ol>
   </body>
 </html>
