--- a/UnB/index.html
+++ b/UnB/index.html
@@ -4,9 +4,10 @@
   </head>
   <body>
     <ol>
-      <li><a href="http://elcttw.gq/UnB/phpxy.html">PHPXY</a> (Not Working)      <a href="http://elcttw.gq/UnB/phpxy2.html">Mirror</a> (Not Working)</li>
-      <li><a href="http://elcttw.gq/UnB/tinypxy.html">TINYPXY</a> (Not WORKING)</li>
-      <li><a href="http://elcttw.gq/UnB/phpxy3.html">PHPXY3</a> (Not Working) [NEW!]</li>
+      <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a> (Working)<br>
+      <a href="http://welcttw.gq/UnB/phpxy2.html">Mirror</a></li>
+      <li><a href="http://welcttw.gq/UnB/tinypxy.html">TINYPXY</a> (Working)</li>
+      <li><a href="http://welcttw.gq/UnB/phprxy3.html">PHPXY3</a> (Not Working)</li>
     </ol>
   </body>
 </html>
