--- a/UnB/phpxy.html
+++ b/UnB/phpxy.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html> 
   <head>
+    <title>Google</title>
+    <link rel="icon" type="image/png" href="/resources/googleicon.ico">
     <style type="text/css">
       body {
       margin:   0;
