--- a/UnB/cl+rm.html
+++ b/UnB/cl+rm.html
@@ -4,13 +4,13 @@
 	</head>
 	<body>
 		<div>
-			<h1>CHANGELOG</h1><br>
+			<h1>CHANGELOG</h1>
 			<p>Added stuffz:
 			<li>Anonymous favicon</li>
 			<li>Support for Video players</li></p>
 		</div>
 		<div>
-			<h1>ROADMAP/h1><br>
+			<h1>ROADMAP</h1>
 			<p>Add new stuffz:
 			<li>Add support for flash games</li>
 			<li>Better anonymity</li>
