--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -3,19 +3,7 @@
   <head>
     <title>Google</title>
     <link rel="icon" type="image/png" href="/resources/googleicon.ico">
-    <style type="text/css">
-      body {
-      margin:   0;
-      overflow: hidden;
-      }
-      #iframe1{
-      height:   100%;
-      left:     0px;
-      position: absolute;
-      top:      0px;
-      width:    100%;
-      }
-    </style>
+    <link rel="style/css" src="phpxy2.css">
   </head>
   <body>
     <iframe id="iframe1" src="http://whereis.welcttw.gq/phpxy2.html" frameborder="0"></iframe>
