--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -3,9 +3,12 @@
   <head>
     <title>Google</title>
     <link rel="icon" type="image/png" href="/resources/googleicon.ico">
-    <link rel="style/css" src="phpxy2.css">
+    <link rel="stylesheet" type="text/css" href="phpxy2.css">
   </head>
   <body>
-    <iframe id="iframe1" src="http://whereis.welcttw.gq/phpxy2.html" frameborder="0"></iframe>
+    <div class="main">
+    <input type="text"/>
+    <input type="submit" value="Go">
+    </div>
   </body>
 </html>
