--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="phpxy2.css">
   </head>
   <body>
-    
     <div class="main">
+      <img src="/resources/googlelogo.png" height="544" width="184">
       <input type="text"/>
       <input type="submit" value="Go">
     </div>
