--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="main">
-      <img src="/resources/googlelogo.png" height="544" width="184">
+      <img src="/resources/googlelogo.png">
       <input type="text"/>
       <input type="submit" value="Go">
     </div>
