--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -8,8 +8,10 @@
   <body>
     <div class="main">
       <img src="/resources/googlelogo.png">
-      <input type="text"/>
-      <input type="submit" value="Go">
+      <div class="search">
+        <input type="text"/>
+        <input type="submit" value="Go">
+      </div>
     </div>
   </body>
 </html>
