--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="phpxy2.css">
   </head>
   <body>
-    <div class="main">
+    <div class="main center">
       <img src="/resources/googlelogo.png">
       <div class="search">
         <input type="text"/>
