--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="main center">
-      <img src="/resources/googlelogo.png">
+      <img src="/resources/googleric.png">
       <div class="search">
         <input type="text"/>
         <input type="submit" value="Go">
