--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -9,8 +9,11 @@
     <div class="main center">
       <img src="/resources/googleric.png">
       <div class="search">
-        <input type="text"/>
-        <input type="submit" value="Go">
+        <input type="text" id="searchbox"/>
+      </div>
+      <div class="searchbuttons center">
+        <input type="submit" value="Google Search">
+        <input type="submit" value="I'm Not Lucky :(">
       </div>
     </div>
   </body>
