--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -8,7 +8,7 @@
   <body>
     <div class="main center">
       <img src="/resources/googleric.png">
-      <div class="search">
+      <div class="search center">
         <input type="text" id="searchbox"/>
       </div>
       <div class="searchbuttons center">
