--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -12,8 +12,8 @@
         <input type="text" id="searchbox"/>
       </div>
       <div class="searchbuttons center">
-        <input type="submit" value="Google Search">
-        <input type="submit" value="I'm Not Lucky :(">
+        <input type="submit" id="subbtn" value="Google Search">
+        <input type="submit" id="luckbtn" value="I'm Not Lucky :(">
       </div>
     </div>
   </body>
