--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -8,10 +8,10 @@
   <body>
     <div class="main center">
       <img src="/resources/googleric.png">
-      <div class="search center">
+      <div class="search ">
         <input type="text" id="searchbox"/>
       </div>
-      <div class="searchbuttons center">
+      <div class="searchbuttons">
         <input type="submit" id="subbtn" value="Google Search">
         <input type="submit" id="luckbtn" value="I'm Not Lucky :(">
       </div>
