--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -4,6 +4,7 @@
     <title>Google</title>
     <link rel="icon" type="image/png" href="/resources/googleicon.ico">
     <link rel="stylesheet" type="text/css" href="phpxy2.css">
+    <script src="encode.js"></script>
   </head>
   <body>
     <div class="main center">
