--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -7,7 +7,7 @@
     <script src="encode.js"></script>
   </head>
   <body>
-    <div class="main center">
+    <div class="main center" id="mainelems">
       <img src="/resources/googleric.png">
       <div class="search ">
         <input type="text" id="searchbox"/>
@@ -17,5 +17,6 @@
         <input type="submit" id="luckbtn" value="I'm Not Lucky :(">
       </div>
     </div>
+    <iframe id="pxy" src="" frameborder="0"></iframe>
   </body>
 </html>
