--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="phpxy2.css">
     <script src="encode.js"></script>
   </head>
-  <body onload="">
+  <body onload="onload()">
     <div class="main center" id="mainelems">
       <img src="/resources/googleric.png">
       <div class="search ">
