--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -13,6 +13,7 @@
         <input type="text" id="searchbox"/>
       </div>
       <div class="searchbuttons centerbtn">
+        <p class="redfont" id="errorbox"></p>
         <input type="submit" id="subbtn" value="Google Search" onclick="go()">
         <input type="submit" id="luckbtn" value="I'm Not Lucky :(">
       </div>
