--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -13,7 +13,7 @@
         <input type="text" id="searchbox"/>
       </div>
       <div class="searchbuttons centerbtn">
-        <p class="redfont" id="errorbox"></p>
+        <p class="redfont" id="errorbox">ERROR: BAD URL</p>
         <input type="submit" id="subbtn" value="Google Search" onclick="go()">
         <input type="submit" id="luckbtn" value="I'm Not Lucky :(">
       </div>
