--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -12,7 +12,7 @@
       <div class="search ">
         <input type="text" id="searchbox"/>
       </div>
-      <div class="searchbuttons centerbtn">
+      <div class="searchbuttons centerbtns">
         <input type="submit" id="subbtn" value="Google Search" onclick="go()">
         <input type="submit" id="luckbtn" value="I'm Not Lucky :(">
       </div>
