--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -13,7 +13,7 @@
 				<input type="text" id="searchbox"/>
 			</div>
 			<div class="searchbuttons centerbtns">
-				<input type="submit" id="subbtn" value="Google Search" onclick="go()">
+				<input type="submit" id="subbtn" value="Google Search" onclick="go(2)">
 				<input type="submit" id="luckbtn" value="I'm Not Lucky :(">
 			</div>
 		</div>
