--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Google</title>
 		<link rel="icon" type="image/png" href="/resources/googleicon.ico">
-		<link rel="stylesheet" type="text/css" href="phpxy2.css">
+		<link rel="stylesheet" type="text/css" href="phpxy.css">
 		<script src="encode.js"></script>
 	</head>
 	<body onload="onload()">
