--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="searchbuttons">
 				<input type="submit" id="subbtn" value="Google Search" onclick="go(2)">
-				<input type="submit" id="luckbtn" value="I'm Not Lucky :(">
+				<input type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="notlucky()">
 			</div>
 		</div>
 		<iframe id="pxy" src="" frameborder="0"></iframe>
