--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -12,7 +12,7 @@
 			<div class="search">
 				<input type="text" id="searchbox"/>
 			</div>
-			<div class="searchbuttons">
+			<div class="centerbtns">
 				<input type="submit" id="subbtn" value="Google Search" onclick="go(2)">
 				<input type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="notlucky()">
 			</div>
