--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -2,8 +2,8 @@
 <html> 
 	<head>
 		<title>Google</title>
-		<link rel="icon" type="image/png" href="/resources/googleicon.ico">
-		<link rel="stylesheet" type="text/css" href="phpxy.css">
+		<link rel="icon" type="image/png" href="/resources/googleicon.ico"/>
+		<link rel="stylesheet" type="text/css" href="phpxy.css"/>
 		<script src="encode.js"></script>
 	</head>
 	<body onload="onload()">
@@ -13,8 +13,8 @@
 				<input type="text" id="searchbox"/>
 			</div>
 			<div class="centerbtns">
-				<input type="submit" id="subbtn" value="Google Search" onclick="go(2)">
-				<input type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="notlucky()">
+				<input type="submit" id="subbtn" value="Google Search" onclick="go(2)"/>
+				<input type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="notlucky()"/>
 			</div>
 		</div>
 		<iframe id="pxy" src="" frameborder="0"></iframe>
