--- a/UnB/phpranked.html
+++ b/UnB/phpranked.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <iframe width="854" height="480" src="https://www.youtube.com/embed/z-nfbDXTiHg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <br>Think about it: what comes after 1? there must be a 2!<br>If you can find it, then you can use the proxy again!<br><h3>The proxy will be back online on May 8, 2018.</h3>
+    <br>Think about it: what comes after 1? there must be a 2!<br>If you can find it, then you can use the proxy again!<br>
   </body>
 </html>
