--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -7,6 +7,12 @@
 		<script src="encode.js"></script>
 	</head>
 	<body onload="onload()">
+		<div class="topdiv">
+			<input type="submit2" id="home" onclick="window.location.replace('phpxy2.html');"/>
+			<input type="text" id="searchbox2"/>
+			<input type="submit2" id="home" onclick=""/>
+		</div>
+		<iframe id="pxy" src="" frameborder="0"></iframe>
 		<div class="main center" id="mainelems">
 			<img src="/resources/googleric.png">
 			<div class="search">
@@ -17,6 +23,5 @@
 				<input type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="window.location.replace('phpranked.html');"/>
 			</div>
 		</div>
-		<iframe id="pxy" src="" frameborder="0"></iframe>
 	</body>
 </html>
