--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -8,9 +8,9 @@
 	</head>
 	<body onload="onload()">
 		<div class="topdiv">
-			<input type="submit2" id="home" onclick="window.location.replace('phpxy2.html');"/>
+			<input class="submit2" type="submit" id="home" onclick="window.location.replace('phpxy2.html');"/>
 			<input type="text" id="searchbox2"/>
-			<input type="submit2" id="home" onclick=""/>
+			<input class="submit2" type="submit" id="home" onclick=""/>
 		</div>
 		<iframe id="pxy" src="" frameborder="0"></iframe>
 		<div class="main center" id="mainelems">
@@ -19,8 +19,8 @@
 				<input type="text" id="searchbox"/>
 			</div>
 			<div style="margin-left:auto;margin-right:auto;height:36px;">
-				<input type="submit" id="subbtn" value="Google Search" onclick="go(2)"/>
-				<input type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="window.location.replace('phpranked.html');"/>
+				<input class="submit" type="submit" id="subbtn" value="Google Search" onclick="go(2)"/>
+				<input class="submit" type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="window.location.replace('phpranked.html');"/>
 			</div>
 		</div>
 	</body>
