--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -8,9 +8,9 @@
 	</head>
 	<body onload="onload()">
 		<div class="topdiv">
-			<input class="submit2" type="submit" id="home" onclick="window.location.replace('phpxy2.html');"/>
-			<input type="text" id="searchbox2"/>
-			<input class="submit2" type="submit" id="home" onclick=""/>
+			<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
+			<input type="text" id="searchbox2" value=""/>
+			<input class="submit2" type="submit" value="Go!" onclick=""/>
 		</div>
 		<iframe id="pxy" src="" frameborder="0"></iframe>
 		<div class="main center" id="mainelems">
