--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -7,7 +7,7 @@
 		<script src="encode.js"></script>
 	</head>
 	<body onload="onload()">
-		<div class="topdiv">
+		<div class="divtop" id="topdiv">
 			<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
 			<input type="text" id="searchbox2" value=""/>
 			<input class="submit2" type="submit" value="Go!" onclick=""/>
