--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -9,14 +9,14 @@
 	<body onload="onload()">
 		<div class="divtop" id="topdiv">
 			<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
-			<input type="text" id="searchbox2" value=""/>
+			<input class="topsearch" type="text" id="searchbox2" value=""/>
 			<input class="submit2" type="submit" value="Go!" onclick=""/>
 		</div>
 		<iframe id="pxy" src="" frameborder="0"></iframe>
 		<div class="main center" id="mainelems">
 			<img src="/resources/googleric.png">
 			<div class="search">
-				<input type="text" id="searchbox"/>
+				<input class="main" type="text" id="searchbox"/>
 			</div>
 			<div style="margin-left:auto;margin-right:auto;height:36px;">
 				<input class="submit" type="submit" id="subbtn" value="Google Search" onclick="go(2)"/>
