--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -10,7 +10,7 @@
 		<div class="divtop" id="topdiv">
 			<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
 			<input class="topsearch" type="text" id="searchbox2" value=""/>
-			<input class="submit2" type="submit" value="Go!" onclick=""/>
+			<input class="submit2" type="submit" value="Go!" onclick="tinysearch(2);"/>
 		</div>
 		<iframe id="pxy" src="" frameborder="0"></iframe>
 		<div class="main center" id="mainelems">
