--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -19,8 +19,8 @@
 				<input class="main" type="text" id="searchbox"/>
 			</div>
 			<div style="margin-left:auto;margin-right:auto;height:36px;">
-				<input class="submit" type="submit" id="subbtn" value="Google Search" onclick="go(2)"/>
-				<input class="submit" type="submit" id="luckbtn" value="I'm Not Lucky :(" onclick="window.location.replace('phpranked.html');"/>
+				<input class="submit" type="submit" id="subbtn" value="Google Search" onclick="google(2)"/>
+				<input class="submit" type="submit" id="luckbtn" value="Proxifiably Lucky!" onclick="go(2)"/>
 			</div>
 		</div>
 	</body>
