--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -8,9 +8,15 @@
 	</head>
 	<body onload="onload()">
 		<div class="divtop" id="topdiv">
-			<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
-			<input class="topsearch" type="text" id="searchbox2" value=""/>
-			<input class="submit2" type="submit" value="Go!" onclick="tinysearch(2);"/>
+			<div>
+				<img src="/resources/Back_arrow.png" onclick="back()">
+				<img src="/resources/Forward_arrow.png" onclick="forward()">
+			</div>
+			<div>
+				<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
+				<input class="topsearch" type="text" id="searchbox2" value=""/>
+				<input class="submit2" type="submit" value="Go!" onclick="tinysearch(2);"/>
+			</div>
 		</div>
 		<iframe id="pxy" src="" frameborder="0"></iframe>
 		<div class="main center" id="mainelems">
