--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -9,8 +9,8 @@
 	<body onload="onload()">
 		<div class="divtop" id="topdiv">
 			<div>
-				<img src="/resources/Back_arrow.png" onclick="back()">
-				<img src="/resources/Forward_arrow.png" onclick="forward()">
+				<img src="/resources/Back_arrow.png" height="20px" width="20px" onclick="back()">
+				<img src="/resources/Forward_arrow.png" height="20px" width="20px" onclick="forward()">
 			</div>
 			<div>
 				<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
