--- a/UnB/cl+rm.html
+++ b/UnB/cl+rm.html
@@ -5,15 +5,14 @@
 	<body>
 		<div>
 			<h1>CHANGELOG</h1>
-			<p>Added stuffz:
-			<li>Anonymous favicon</li>
-			<li>Support for Video players</li></p>
+			<p>Added stuffz (ON DEVBRANCH):
+			<li>Fixed search buttons to actually search on google</li>
+			<li>New sexy html wrapper (Google Eric)</li></p>
 		</div>
 		<div>
 			<h1>ROADMAP</h1>
 			<p>Add new stuffz:
 			<li>Add support for flash games</li>
-			<li>Better anonymity</li>
 			<li>Add Tor support</li>
 			<li>Add Twitch support</li></p>
 		</div>
