--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -9,10 +9,8 @@
 	<body onload="onload()">
 		<div class="divtop" id="topdiv">
 			<div class="inline">
-				<img class="bf" src="/resources/Back_arrow.png" onclick="back()">
-				<img class="bf" src="/resources/Forward_arrow.png" onclick="forward()">
-			</div>
-			<div class="inline">
+				<button class="bf" style="background: url(/resources/Back_arrow.png)" onclick="back()">
+				<button class="bf" style="background: url(/resources/Forward_arrow.png)" onclick="forward()">
 				<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
 				<input class="topsearch" type="text" id="searchbox2" value=""/>
 				<input class="submit2" type="submit" value="Go!" onclick="tinysearch(2);"/>
