--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -9,8 +9,8 @@
 	<body onload="onload()">
 		<div class="divtop" id="topdiv">
 			<div class="inline">
-				<button class="bf" style="background: url("/resources/Back_arrow.png")" height="30" width="30" onclick="back()"></button>
-				<button class="bf" style="background: url("/resources/Forward_arrow.png")" height="30" width="30" onclick="forward()"></button>
+				<button class="bf" style="background: url('/resources/Back_arrow.png')" height="30" width="30" onclick="back()"></button>
+				<button class="bf" style="background: url('/resources/Forward_arrow.png')" height="30" width="30" onclick="forward()"></button>
 				<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
 				<input class="topsearch" type="text" id="searchbox2" value=""/>
 				<input class="submit2" type="submit" value="Go!" onclick="tinysearch(2);"/>
