--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -16,7 +16,7 @@
 				<div class="innernut">
 					<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy2.html');"/>
 					<input class="topsearch" type="text" id="searchbox2" value=""/>
-					<input class="submit2" type="submit" value="Go!" onclick="tinysearch(2);"/>
+					<input id="subbtn2" class="submit2" type="submit" value="Go!" onclick="tinysearch(2);"/>
 				</div>
 			</div>
 		</div>
