--- a/UnB/phpxy.html
+++ b/UnB/phpxy.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html> 
-  <head>
-    <title>Google</title>
-    <link rel="icon" type="image/png" href="/resources/googleicon.ico">
-    <style type="text/css">
-      body {
-      margin:   0;
-      overflow: hidden;
-      }
-      #iframe1{
-      height:   100%;
-      left:     0px;
-      position: absolute;
-      top:      0px;
-      width:    100%;
-      }
-    </style>
-  </head>
-  <body>
-    <iframe id="iframe1" src="http://whereis.welcttw.gq/phpxy.html" frameborder="0"></iframe>
-  </body>
+	<head>
+		<title>Google</title>
+		<link rel="icon" type="image/png" href="/resources/googleicon.ico"/>
+		<link rel="stylesheet" type="text/css" href="phpxy.css"/>
+		<script src="encode.js"></script>
+	</head>
+	<body onload="onload()">
+		<div class="divtop" id="topdiv">
+			<div class="inline">
+				<div class="nuttynut">
+					<input class="bf" type="image" src="/resources/Back_arrow.png" height="30" width="30" onclick="back()"/>
+					<input class="bf" type="image" src="/resources/Forward_arrow.png" height="30" width="30" onclick="forward()"/>
+				</div>
+				<div class="innernut">
+					<input class="submit2" type="submit" value="Home" onclick="window.location.replace('phpxy.html');"/>
+					<input class="topsearch" type="text" id="searchbox2" value=""/>
+					<input id="subbtn2" class="submit2" type="submit" value="Go!" onclick="tinysearch(1);"/>
+				</div>
+			</div>
+		</div>
+		<iframe id="pxy" src="" frameborder="0"></iframe>
+		<div class="main center" id="mainelems">
+			<img src="/resources/googleric.png">
+			<div class="search">
+				<input class="main" type="text" id="searchbox"/>
+			</div>
+			<div style="margin-left:auto;margin-right:auto;height:36px;">
+				<input class="submit" type="submit" id="subbtn" value="Google Search" onclick="google(1)"/>
+				<input class="submit" type="submit" id="luckbtn" value="Proxifiably Lucky!" onclick="go(1)"/>
+			</div>
+		</div>
+	</body>
 </html>
