--- a/UnB/tinypxy.html
+++ b/UnB/tinypxy.html
@@ -7,6 +7,7 @@
       overflow: hidden;
       }
       #iframe1{
+      display: none;
       height:   100%;
       left:     0px;
       position: absolute;
@@ -17,5 +18,6 @@
   </head>
   <body>
     <iframe id="iframe1" src="http://whereis.welcttw.gq/tinypxy.html" frameborder="0"></iframe>
+    <h1>NOT WORKING [ABANDONED]</h1>
   </body>
 </html>
