--- a/UnB/cl+rm.html
+++ b/UnB/cl+rm.html
@@ -6,8 +6,8 @@
 		<div>
 			<h1>CHANGELOG</h1>
 			<p>Added stuffz (ON DEVBRANCH):
-			<li>Fixed search buttons to actually search on google</li>
-			<li>New sexy html wrapper (Google Eric)</li></p>
+			<li>Added website caching (no loss on reload)</li>
+			<li>REEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</li>
 		</div>
 		<div>
 			<h1>ROADMAP</h1>
