--- a/G/unhacked/tanktrouble.html
+++ b/G/unhacked/tanktrouble.html
@@ -31,7 +31,7 @@
 			<param name="wmode" value="transparent"> 
 			<param name="allowFullScreen" value="true"> 
 			<param name="flashvars" value=""> 
-			<embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle"  height="490px" width="712px"></embed>
+			<embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle"  height="490px" width="712px">
 			</object>
 		</div>
 	</body>
