--- a/G/gpages/tanktrouble.html
+++ b/G/gpages/tanktrouble.html
@@ -21,12 +21,8 @@
 				<param name="allowscriptaccess" value="always" />
 				<param name="allownetworking" value="all" />
 				<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="tanktrouble.swf" width="100%" height="100%">
-					<param name="play" value="true" />
-					<param name="loop" value="true" />
-					<param name="quality" value="high" />
+				<object type="application/x-shockwave-flash" data="/G/swfs/tanktrouble.swf" width="100%" height="100%">
 					<param name="scale" value="showall" />
-					<param name="wmode" value="window" />
 					<param name="allowfullscreen" value="true" />
 					<param name="allowscriptaccess" value="always" />
 					<param name="allownetworking" value="all" />
