--- a/G/gpages/tanktrouble.html
+++ b/G/gpages/tanktrouble.html
@@ -22,7 +22,11 @@
 				<param name="allownetworking" value="all" />
 				<!--[if !IE]>-->
 				<object type="application/x-shockwave-flash" data="/G/swfs/tanktrouble.swf" width="100%" height="100%">
+					<param name="play" value="true" />
+					<param name="loop" value="true" />
+					<param name="quality" value="high" />
 					<param name="scale" value="showall" />
+					<param name="wmode" value="window" />
 					<param name="allowfullscreen" value="true" />
 					<param name="allowscriptaccess" value="always" />
 					<param name="allownetworking" value="all" />
