--- a/UnB/phpxy2.html
+++ b/UnB/phpxy2.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="phpxy.css"/>
 		<script src="encode.js"></script>
 	</head>
-	<body onload="onload()">
+	<body onload="onload(1)">
 		<div class="divtop" id="topdiv">
 			<div class="inline">
 				<div class="nuttynut">
