--- a/UnB/phpxy.html
+++ b/UnB/phpxy.html
@@ -21,7 +21,7 @@
 				</div>
 			</div>
 		</div>
-		<iframe id="pxy" onload="iframeload();" src="" frameborder="0"></iframe>
+		<iframe id="pxy" src="" frameborder="0"></iframe>
 		<div class="main center" id="mainelems">
 			<img src="/resources/googleric.png">
 			<div class="search">
