--- a/OD/index.html
+++ b/OD/index.html
@@ -1,4 +1,4 @@
 <audio controls>
   <source src="mad dreams.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
+Your browser does not support the audio element. Use Chrome/Firefox/Safari to listen.
 </audio>
