--- a/UnB/index.html
+++ b/UnB/index.html
@@ -8,6 +8,8 @@
       <li><a href="http://welcttw.gq/UnB/tinypxy.html">TINYPXY</a> (Not Working)</li>
       <li><a href="http://welcttw.gq/UnB/phprxy3.html">PHPXY3</a> (Not Working)</li>
       <li><a href="http://welcttw.gq/UnB/cl+rm.html">CHANGELOG+ROADMAP</a></li>
+      <br>
+      <h2>Sorry! Proxy down for maintainance</h2>
     </ol>
   </body>
 </html>
