--- a/G/gpages/tanktrouble.html
+++ b/G/gpages/tanktrouble.html
@@ -3,41 +3,13 @@
 	<head>
 		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-		<script type="text/javascript" src="/resources/swfobject/swfobject.js"></script>
-		<script type="text/javascript">
-			swfobject.registerObject("myFlashContent", "9.0.0");
-		</script>
+		<script type="text/javascript" src="swfobject.js"></script>
+		<script type="text/javascript" src="jquery.js"></script>
+		<script>$(document).ready(function() {$('#flashDiv').flash('/G/swfs/tank-trouble-3.8c.swf');});</script>
 	</head>
 	<body>
-		<div>
-			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="myFlashContent">
-				<param name="movie" value="/G/swfs/tanktrouble.swf" />
-				<param name="play" value="true" />
-				<param name="loop" value="true" />
-				<param name="quality" value="high" />
-				<param name="scale" value="showall" />
-				<param name="wmode" value="window" />
-				<param name="allowfullscreen" value="true" />
-				<param name="allowscriptaccess" value="always" />
-				<param name="allownetworking" value="all" />
-				<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="/G/swfs/tanktrouble.swf" width="100%" height="100%">
-					<param name="play" value="true" />
-					<param name="loop" value="true" />
-					<param name="quality" value="high" />
-					<param name="scale" value="showall" />
-					<param name="wmode" value="window" />
-					<param name="allowfullscreen" value="true" />
-					<param name="allowscriptaccess" value="always" />
-					<param name="allownetworking" value="all" />
-				<!--<![endif]-->
-					<a href="http://www.adobe.com/go/getflashplayer">
-						<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
-					</a>
-				<!--[if !IE]>-->
-				</object>
-				<!--<![endif]-->
-			</object>
+		<div id="flashDiv">
+			<a href="https://get.adobe.com/flashplayer/">CLICK TO ENABLE FLASH</a>
 		</div>
 	</body>
 </html>
