--- a/G/surviv/index.html
+++ b/G/surviv/index.html
@@ -1317,5 +1317,5 @@
       </div>
     </div>
   </div>
-<script type="text/javascript" src="js/manifest.ce46a9fc.js"></script><script type="text/javascript" src="js/vendor.c9de893b.js"></script><script type="text/javascript" src="js/app.7f750880.js"></script></body>
+<script type="text/javascript" src="manifest.ce46a9fc.js"></script><script type="text/javascript" src="vendor.c9de893b.js"></script><script type="text/javascript" src="app.7f750880.js"></script></body>
 </html>
