--- a/UnB/index.html
+++ b/UnB/index.html
@@ -4,10 +4,10 @@
   </head>
   <body>
     <ol>
-      <li><a href="http://welcttw.gq/UnB/phpxy.html">PHPXY</a> (Working) | <a href="http://welcttw.gq/UnB/phpxy2.html">DEVBRANCH</a> (Under Development)</li>
-      <li><a href="http://welcttw.gq/UnB/tinypxy.html">TINYPXY</a> (Not Working)</li>
-      <li><a href="http://welcttw.gq/UnB/phprxy3.html">PHPXY3</a> (Not Working)</li>
-      <li><a href="http://welcttw.gq/UnB/cl+rm.html">CHANGELOG+ROADMAP</a></li>
+      <li><a href="http://swfworld.github.io/UnB/phpxy.html">PHPXY</a> (Working) | <a href="http://swfworld.github.io/UnB/phpxy2.html">DEVBRANCH</a> (Under Development)</li>
+      <li><a href="http://swfworld.github.io/UnB/tinypxy.html">TINYPXY</a> (Not Working)</li>
+      <li><a href="http://swfworld.github.io/UnB/phprxy3.html">PHPXY3</a> (Not Working)</li>
+      <li><a href="http://swfworld.github.io/UnB/cl+rm.html">CHANGELOG+ROADMAP</a></li>
       <br>
       <h2>Sorry! Proxy down for maintenance</h2>
     </ol>
