Update and rename UnB/phpxy2.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Google</title>
 		<link rel="icon" type="image/png" href="/resources/googleicon.ico"/>
-		<link rel="stylesheet" type="text/css" href="phpxy.css"/>
-		<script src="encode.js"></script>
+		<link rel="stylesheet" type="text/css" href="UnB/phpxy.css"/>
+		<script src="UnB/encode.js"></script>
 	</head>
 	<body onload="onload(1)">
 		<div class="divtop" id="topdiv">
